<resources>
    <string name="app_name">RealTimeNewsPJ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="okhttp_fragment_title">OkHttp 로 News를 불러오는 activity 입니다.</string>
    <string name="ipsum">자랑처럼 그러나 노새, 위에 있습니다. 멀듯이, 별 위에도 지나고 내린 어머님, 있습니다. 이름과, 별빛이 벌써 가슴속에 나는 봅니다. 어머니 이국 잠, 차 이름을 어머니, 별을 봅니다. 추억과 나는 계집애들의 하나 패, 다 별 까닭입니다. 같이 청춘이 이름을 가득 마디씩 어머니, 어머님, 헤는 계십니다. 하나의 사람들의 다 별 책상을 위에 계집애들의 다 어머니, 봅니다. 이웃 가득 그리고 많은 피어나듯이 있습니다. 나는 피어나듯이 아이들의 봅니다. 새겨지는 못 남은 까닭입니다.</string>
    <string name="author_temp">김펭수 기자</string>
    <string name="url_temp">https://www.google.com</string>
    <string name="sesac_times">새싹일보</string>
    <string name="paper_hint">신문사 입력</string>
    <string name="section_hint">분야 입력</string>
    <string name="search_btn_text">검색</string>
    <string name="sesac_times_retrofit">새싹일보_Retrofit</string>
    <string name="search_token_hint">키워드 입력</string>
</resources>